--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <tr>
                   <td style="padding:25px;width:25%;vertical-align:middle">
                     <p style="text-align:center;font-size:small;">
-		              <a href="https://clustrmaps.com/site/1bjf7" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=5D_qUy__xzHcjumy0kCyHWlbB6laBEt94KoCb2MaAtI&cl=ffffff"></a>
+		              <a href="https://clustrmaps.com/site/1bjpz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=5D_qUy__xzHcjumy0kCyHWlbB6laBEt94KoCb2MaAtI&cl=ffffff"></a>
                     </p>
                   </td>
                 </tr>
