--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
                 <tr>
                   <td style="padding:25px;width:25%;vertical-align:middle">
                     <p style="text-align:center;font-size:small;">
-		              <a href="https://clustrmaps.com/site/1bjpz" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=5D_qUy__xzHcjumy0kCyHWlbB6laBEt94KoCb2MaAtI&cl=ffffff"></a>
-                    </p>
+		              <a href="http://www.clustrmaps.com/map/Muntakimrafi.github.io" title="Visit tracker for Muntakimrafi.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=HQV-4JuQvmOm3EvitfLO6HDD9bb7wA9SR_0RpufiNcA" /></a>                    </p>
                   </td>
                 </tr>
                 </tbody></table>
