--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
                 <name>Abdul Muntakim Rafi</name>
               </p>
                 <p>I am a PhD Candidate at the University of British Columbia working under the supervision of Dr.
-                  Carl de Boer.
+                  Carl de Boer. Our lab aims to understand how the genome is regulated using high-throughput experimental approaches and machine learning.                  
 
                   <br><br>
-                  Our lab aims to understand how the genome is regulated using high-throughput experimental approaches and machine learning.
-
-                  <br><br>
+		A summary of my profile is as follows:
                 ⊛ Published in top tier conferences and journals such as CVPR, ECCV. MICCAI, NCAA.
-				⊛ Skilled in Python, Cloud computing, MATLAB, and different machine & deep learning libraries (Pytorch, Keras, Tensorflow, etc.).
-				⊛ Experienced in data collection, annotation supervision, and deep learning model designing, training, deployment.
-				⊛ Four years of involvement in academic research. Previous job and internship experiences in software companies on deep learning based projects..
+		⊛ Skilled in Python, Cloud computing, MATLAB, and different machine & deep learning libraries (Pytorch, Keras, Tensorflow, etc.).
+		⊛ Experienced in data collection, annotation supervision, and deep learning model designing, training, deployment.
+		⊛ Four years of involvement in academic research. Previous job and internship experiences in software companies on deep learning based projects..
                 </p>
               </p>
               <p style="text-align:center">
