--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/rafi.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/rafi_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/rafi.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/rafi_circle.png" class="hoverZoomLink"></a>
             </td>
           </tr>
 
