--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
              <strong>Abdul Muntakim Rafi</strong>, Uday Kamal, Rakibul Hoque, Abid Abrar, Sowmitra Das, Robert Laganiere, Md Kamrul Hasan
               <br>
 
-              <a href="https://openaccess.thecvf.com/content_CVPRW_2019/papers/Media%20Forensics/Rafi_Application_of_DenseNet_in_Camera_Model_Identification_and_Post-processing_Detection_CVPRW_2019_paper.pdf"><em>CVPR</em></a>, 2019 &nbsp
+              <a href="https://cvpr2019.thecvf.com/"><em>CVPR 2019 &nbsp</em></a>
               <br>
               [<a href="https://github.com/muntakimrafi/Application-of-DenseNet-in-Camera-Model-Identification-and-Post-processing-Detection">Code</a>]
 
