--- a/index.html
+++ b/index.html
@@ -104,8 +104,46 @@
               [<a href="https://github.com/muntakimrafi/Application-of-DenseNet-in-Camera-Model-Identification-and-Post-processing-Detection">Code</a>]
 
               <p></p>
-                Camera model identification has earned paramount importance in the field of image forensics with an upsurge of digitally altered images which are constantly being shared through websites, media, and social applications. 
-		    But, the task of identification becomes quite challenging if metadata are absent from the image and/or if the image has been postprocessed. In this paper, we present            </td>
+                Camera model identification has earned paramount importance in the field of image forensics with an upsurge of digitally altered images which are constantly being shared through websites, media, and social applications. But, the task of identification becomes quite challenging if metadata are absent from the image and/or if the image has been postprocessed. In this paper, we present ...
+          </td>
+	</tr> 
+
+
+	<!--tpGAN-->
+<!--        -->
+          <tr onmouseout="remnet_stop()" onmouseover="remnet_start()"  bgcolor="#ffffff">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='remnet_image'>
+                <img src="images/remnet1.gif" width="160">
+                </div>
+                <img src='images/remnet3.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function remnet_start() {
+                  document.getElementById('remnet_image').style.opacity = "1";
+                }
+
+                function remnet_stop() {
+                  document.getElementById('remnet_image').style.opacity = "0";
+                }
+                remnet_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://link.springer.com/article/10.1007/s00521-020-05220-y">
+                <papertitle>RemNet: remnant convolutional neural network for camera model identification</papertitle>
+              </a>
+              <br>
+             <strong>Abdul Muntakim Rafi</strong>, Thamidul Islam Tonmoy, Uday Kamal, Jonathan Wu, Md Kamrul Hasan
+              <br>
+
+              <a href="https://www.springer.com/journal/521"><em>Neural Computing and Applications &nbsp</em></a>
+              <br>
+              [<a href="https://github.com/muntakimrafi/RemNet-remnant-convolutional-neural-network-for-camera-model-identification">Code</a>]
+
+              <p></p>
+                Camera model identification (CMI) has gained significant importance in image forensics as digitally altered images are becoming increasingly commonplace. In this paper, a novel convolutional neural network (CNN) architecture is proposed for CMI with emphasis given on the preprocessing task considered to be inevitable for removing the scene content that heavily obscures the camera model fingerprints ...
           </td>
 	</tr> 
 
