--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
              <strong>Abdul Muntakim Rafi</strong>, Uday Kamal, Rakibul Hoque, Abid Abrar, Sowmitra Das, Robert Laganiere, Md Kamrul Hasan
               <br>
 
-              <a href="https://cvpr2019.thecvf.com/"><em>CVPR 2019 &nbsp</em></a>
+              <a href="https://cvpr2019.thecvf.com/"><em>CVPR 2019</em></a> &nbsp
               <br>
               [<a href="https://github.com/muntakimrafi/Application-of-DenseNet-in-Camera-Model-Identification-and-Post-processing-Detection">Code</a>]
 
@@ -117,7 +117,7 @@
                 <div class="two" id='remnet_image'>
                 <img src="images/remnet1.gif" width="160">
                 </div>
-                <img src='images/remnet3.png' width="160">
+                <img src='images/remnet4.png' width="160">
               </div>
               <script type="text/javascript">
                 function remnet_start() {
@@ -138,7 +138,7 @@
              <strong>Abdul Muntakim Rafi</strong>, Thamidul Islam Tonmoy, Uday Kamal, Jonathan Wu, Md Kamrul Hasan
               <br>
 
-              <a href="https://www.springer.com/journal/521"><em>Neural Computing and Applications &nbsp</em></a>
+              <a href="https://www.springer.com/journal/521"><em>Neural Computing and Applications</em></a> &nbsp
               <br>
               [<a href="https://github.com/muntakimrafi/RemNet-remnant-convolutional-neural-network-for-camera-model-identification">Code</a>]
 
