--- a/index.html
+++ b/index.html
@@ -143,7 +143,154 @@
               [<a href="https://github.com/muntakimrafi/RemNet-remnant-convolutional-neural-network-for-camera-model-identification">Code</a>]
 
               <p></p>
-                Camera model identification (CMI) has gained significant importance in image forensics as digitally altered images are becoming increasingly commonplace. In this paper, a novel convolutional neural network (CNN) architecture is proposed for CMI with emphasis given on the preprocessing task considered to be inevitable for removing the scene content that heavily obscures the camera model fingerprints ...
+                In this paper, a novel convolutional neural network (CNN) architecture is proposed for CMI with emphasis given on the preprocessing task considered to be inevitable for removing the scene content that heavily obscures the camera model fingerprints. Unlike the conventional approaches where fixed filters are used for preprocessing, the proposed remnant blocks, when coupled with a classification block and trained end-to-end minimizing the classification loss, learn to suppress the unnecessary image contents dynamically ...
+          </td>
+	</tr> 
+
+		<!--tpGAN-->
+<!--        -->
+          <tr onmouseout="l2remnet_stop()" onmouseover="l2remnet_start()"  bgcolor="#ffffff">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='l2remnet_image'>
+                <img src="images/l2remnet1.gif" width="160">
+                </div>
+                <img src='images/l2remnet1.gif' width="160">
+              </div>
+              <script type="text/javascript">
+                function l2remnet_start() {
+                  document.getElementById('l2remnet_image').style.opacity = "1";
+                }
+
+                function l2remnet_stop() {
+                  document.getElementById('l2remnet_image').style.opacity = "0";
+                }
+                l2remnet_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://link.springer.com/chapter/10.1007/978-3-030-66823-5_16">
+                <papertitle>L2-Constrained RemNet for Camera Model Identification and Image Manipulation Detection</papertitle>
+              </a>
+              <br>
+             <strong>Abdul Muntakim Rafi</strong>, Jonathan Wu, Md. Kamrul Hasan
+              <br>
+
+              <a href="https://eccv2020.eu/"><em>ECCV 2020</em></a> &nbsp
+              <p></p>
+                The proposed network architecture consists of a dynamic preprocessor block and a classification block. An L2 loss is applied to the output of the preprocessor block, and categorical crossentropy loss is calculated based on the output of the classification block. The whole network is trained in an end-to-end manner by minimizing the total loss, which is a combination of the L2 loss and the categorical crossentropy ...
+          </td>
+	</tr> 
+
+		<!--tpGAN-->
+<!--        -->
+          <tr onmouseout="lung_stop()" onmouseover="lung_start()"  bgcolor="#ffffff">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='lung_image'>
+                <img src="images/lung1.gif" width="160">
+                </div>
+                <img src='images/lung1.gif' width="160">
+              </div>
+              <script type="text/javascript">
+                function lung_start() {
+                  document.getElementById('lung_image').style.opacity = "1";
+                }
+
+                function lung_stop() {
+                  document.getElementById('lung_image').style.opacity = "0";
+                }
+                lung_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://link.springer.com/chapter/10.1007/978-3-030-62469-9_4">
+                <papertitle>Lung cancer tumor region segmentation using recurrent 3d-denseunet</papertitle>
+              </a>
+              <br>
+             Uday Kamal, <strong>Abdul Muntakim Rafi</strong>, Rakibul Hoque, Jonathan Wu, Md Kamrul Hasan
+              <br>
+
+              <a href="https://miccai2020.org/en/"><em>MICCAI 2020</em></a> &nbsp
+              <br>
+              [<a href="https://github.com/muntakimrafi/TIA2020-Recurrent-3D-DenseUNet">Code</a>]
+
+              <p></p>
+                 In this paper, we present Recurrent 3D-DenseUNet, a novel deep learning based architecture for volumetric lung tumor segmentation from CT scans. The proposed architecture consists of a 3D encoder block that learns to extract fine-grained spatial and coarse-grained temporal features, a recurrent block of multiple Convolutional Long Short-Term Memory (ConvLSTM) layers to extract fine-grained spatio-temporal ...
+          </td>
+	</tr> 
+
+		<!--tpGAN-->
+<!--        -->
+          <tr onmouseout="covid_stop()" onmouseover="covid_start()"  bgcolor="#ffffff">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='covid_image'>
+                <img src="images/covid1.gif" width="160">
+                </div>
+                <img src='images/covid1.gif' width="160">
+              </div>
+              <script type="text/javascript">
+                function covid_start() {
+                  document.getElementById('covid_image').style.opacity = "1";
+                }
+
+                function covid_stop() {
+                  document.getElementById('covid_image').style.opacity = "0";
+                }
+                covid_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://ieeexplore.ieee.org/abstract/document/9283376">
+                <papertitle>Understanding Global Reaction to the Recent Outbreaks of COVID-19: Insights from Instagram Data Analysis</papertitle>
+              </a>
+              <br>
+             <strong>Abdul Muntakim Rafi</strong>, Shivang Rana, Rajwinder Kaur, QM Jonathan Wu, Pooya Moradian Zadeh
+              <br>
+
+              <a href="http://smc2020.org/"><em>IEEE SMC 2020</em></a> &nbsp
+              <p></p>
+                This paper examines the reaction of individuals to the virus outbreak-through the analytical lens of specific hashtags on the Instagram platform. The Instagram posts are analyzed in an attempt to surface commonalities in the way that individuals use visual social media when reacting to this crisis. After collecting the data, the posts containing the location data are selected ...
+          </td>
+	</tr> 
+
+		<!--tpGAN-->
+<!--        -->
+          <tr onmouseout="sign_stop()" onmouseover="sign_start()"  bgcolor="#ffffff">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='sign_image'>
+                <img src="images/sign1.gif" width="160">
+                </div>
+                <img src='images/sign1.gif' width="160">
+              </div>
+              <script type="text/javascript">
+                function sign_start() {
+                  document.getElementById('sign_image').style.opacity = "1";
+                }
+
+                function sign_stop() {
+                  document.getElementById('sign_image').style.opacity = "0";
+                }
+                sign_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://ieeexplore.ieee.org/abstract/document/9033031">
+                <papertitle>Image-based Bengali Sign Language Alphabet Recognition for Deaf and Dumb Community</papertitle>
+              </a>
+              <br>
+             <strong>Abdul Muntakim Rafi</strong>, Nowshin Nawal, Nur Sultan Nazar Bayev, Lusain Nima, Celia Shahnaz, Shaikh Anowarul Fattah
+              <br>
+
+              <a href="https://www.springer.com/journal/521"><em>Neural Computing and Applications</em></a> &nbsp
+              <p></p>
+                We have collected in total 12581 different hand signs for the
+				38 BdSL alphabets in collaboration with the National Federation
+				of the Deaf. We propose a VGG19 based convolutional neural
+				network for the recognition of 38 classes and achieve an overall
+				test accuracy of 89.6% ...
           </td>
 	</tr> 
 
