--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div class="two" id='covid_image'>
                 <img src="images/covid1.gif" width="160">
                 </div>
-                <img src='images/covid5.png' width="160">
+                <img src='images/covid5.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function covid_start() {
