--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="two" id='l2remnet_image'>
                 <img src="images/l2remnet1.gif" width="160">
                 </div>
-                <img src='images/l2remnet1.gif' width="160">
+                <img src='images/l2remnet3.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function l2remnet_start() {
@@ -190,7 +190,7 @@
                 <div class="two" id='lung_image'>
                 <img src="images/lung1.gif" width="160">
                 </div>
-                <img src='images/lung1.gif' width="160">
+                <img src='images/lung2.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function lung_start() {
@@ -263,7 +263,7 @@
                 <div class="two" id='sign_image'>
                 <img src="images/sign1.gif" width="160">
                 </div>
-                <img src='images/sign1.gif' width="160">
+                <img src='images/sign2.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function sign_start() {
