--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="two" id='dense_image'>
                 <img src="images/dense1.gif" width="160">
                 </div>
-                <img src='images/dense1.gif' width="160">
+                <img src='images/dense2.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function dense_start() {
@@ -117,7 +117,7 @@
                 <div class="two" id='remnet_image'>
                 <img src="images/remnet1.gif" width="160">
                 </div>
-                <img src='images/remnet1.gif' width="160">
+                <img src='images/remnet2.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function remnet_start() {
@@ -155,7 +155,7 @@
                 <div class="two" id='l2remnet_image'>
                 <img src="images/l2remnet1.gif" width="160">
                 </div>
-                <img src='images/l2remnet3.PNG' width="160">
+                <img src='images/l2remnet2.PNG' width="160">
               </div>
               <script type="text/javascript">
                 function l2remnet_start() {
