--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:abdulmuntakim.rafi@ubc.ca">Email</a> &nbsp|&nbsp
-                <a href="data/RAFI_CV.pdf" target="_blank">CV</a> &nbsp|&nbsp
+                <a href="data/CV_RAFI_SEP_2021.pdf" target="_blank">CV</a> &nbsp|&nbsp
                 <a href="https://scholar.google.com/citations?user=fyNavPkAAAAJ&hl=en">Google Scholar</a>
                 &nbsp|&nbsp
                 <a href="https://www.researchgate.net/profile/Abdul-Muntakim-Rafi/publications">Research Gate</a> &nbsp|&nbsp
@@ -284,7 +284,7 @@
              <strong>Abdul Muntakim Rafi</strong>, Nowshin Nawal, Nur Sultan Nazar Bayev, Lusain Nima, Celia Shahnaz, Shaikh Anowarul Fattah
               <br>
 
-              <a href="https://www.springer.com/journal/521"><em>Neural Computing and Applications</em></a> &nbsp
+              <a href="https://ieeeghtc.org/archives/ghtc-2019/"><em>IEEE GHTC 2019</em></a> &nbsp
               <p></p>
                 We have collected in total 12581 different hand signs for the
 				38 BdSL alphabets in collaboration with the National Federation
@@ -298,27 +298,7 @@
         </tbody></table>
 
 
-<!--Engineering projects-->
-<!--        -->
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
-          <tr>
-            <td>
-              <heading>Engineering Projects from the past</heading>
-              <p>
-                I always loved hands-on engineering and even long before I got formal education on engineering, I
-                used to mess around with electronic devices I could find to build new stuffs out of them. I will add
-                some of the documented builds slowly (most of these are from my high-school and freshman year). Scroll to the bottom to see some janky yet wonderful rovers I made out of literally cardboard and broken toys.
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-        </tbody></table>
-
-
+<!--Experience-->
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
