--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         </tbody></table>
 
 
-<!--Experience-->
+<!--Teaching Experience-->
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
@@ -311,36 +311,29 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle"><img
-                    src="images/ECE_closed_full_colour-high-res_0.jpg"></td>
+                    src="images/mds.PNG"></td>
             <td width="75%" valign="center">
-              <a href="https://ece.ubc.ca/"><papertitle>Department of Electrical and Computer Engineering, University
+              <a href="https://masterdatascience.ubc.ca/"><papertitle>Master of Data Science, University
               of British Columbia </papertitle></a>
               <br><br>
-              <a href="https://ece.ubc.ca/courses/eece-570/">EECE 570: Fundamentals of Visual Computing, Spring
-                2019</a>
+              <a href="https://ubc-mds.github.io/course-descriptions/DSCI_522_dsci-workflows/">DSCI 522: Data Science Workows</a>
               <br>
-              <a href="https://ece.ubc.ca/courses/eece-570/">EECE 570: Fundamentals of Visual Computing, Spring
-                2020</a>
-              <br><br>
-              <a href="https://ece.ubc.ca/courses/elec-421/">ELEC 421: Digital Signal and Image Processing, Fall
-                2019</a>
-              <br><br>
-              <a href="https://ece.ubc.ca/courses/elec-491/">ELEC 491: Capstone Design Project, Fall-Spring
-                2020-2021</a>
-              <br>
-              <a href="https://ece.ubc.ca/courses/elec-491/">ELEC 491: Capstone Design Project, Fall-Spring
-                2021-2022</a>
+              <a href="https://ubc-mds.github.io/course-descriptions/DSCI_512_alg-data-struct/">DSCI 512: Algorithms and Data Structures</a>
+	      <br>
+              <a href="https://ubc-mds.github.io/course-descriptions/DSCI_521_platforms-dsci/">DSCI 521: Computing Platforms for Data Science</a>
             </td>
           </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/SBME_UBC_Horizontal_Primary_Colour_RGB.png">
+              <img src="images/windsor.png">
             </td>
             <td width="75%" valign="center">
-              <a href="https://www.bme.ubc.ca/"><papertitle>School of Biomedical Engineering, University
-              of British Columbia</papertitle> </a>
+              <a href="https://www.uwindsor.ca/engineering/electrical/"><papertitle>Electrical and Computer Engineering, University
+              of Windsor</papertitle> </a>
               <br><br>
-              <a href="https://courses.students.ubc.ca/cs/courseschedule?pname=subjarea&tname=subj-course&dept=BMEG&course=321">BMEG 321: Biomedical Instrumentation, Summer-Fall 2021</a>
+              ELEC 8330: Computational Intelligence
+	      <br>
+	      GENG 2320: Engineering Software Fundamentals
 
             </td>
           </tr>
