--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle"><img
-                    src="images/mds.png"></td>
+                    src="images/ubc.png"></td>
             <td width="75%" valign="center">
               <a href="https://masterdatascience.ubc.ca/"><papertitle>Master of Data Science, University
               of British Columbia </papertitle></a>
