--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle"><img
-                    src="images/ubc.png", width="120"></td>
+                    src="images/ubc.png", width="160"></td>
             <td width="75%" valign="center">
               <a href="https://masterdatascience.ubc.ca/"><papertitle>Master of Data Science, University
               of British Columbia </papertitle></a>
@@ -338,6 +338,53 @@
             </td>
           </tr>
         </tbody></table>
+	
+	<!--Job Experience-->
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Job Experience</heading>
+            </td>
+          </tr>
+        </tbody></table>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/lanner.jfif", width="160">
+            </td>
+            <td width="75%" valign="center">
+              <a href="https://www.lannerinc.com/"><papertitle>Mitacs Accelerate Intern, Lanner Electronics Inc.</papertitle> </a>
+              <br><br>
+		Joined Lanner through the Mitacs Accelerate, which is Canada's premiere research internship program. Here, I worked
+		on efficient inference of different AI-driven applications in edge devices.
+            </td>
+          </tr>
+	
+	   <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/ifiveo.png", width="160">
+            </td>
+            <td width="75%" valign="center">
+              <a href="https://www.i-5o.ai/"><papertitle>Deep Learning Engineer, IFIVEO.</papertitle> </a>
+              <br><br>
+		Joined ifiveo through the Mitacs Accelerate. Here, my task has been to perform activity recognition in order to measure
+		and improve manufacturing floor production processes using deep learning based vision systems. I have collected data from
+		manufacturing floors, supervised the annotation process, and deployed deep learning models using Amazon Sagemaker.
+            </td>
+          </tr>
+	
+	   <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/reve.jpg", width="160">
+            </td>
+            <td width="75%" valign="center">
+              <a href="https://www.revesoft.com//"><papertitle>Machine Learning Engineer, REVE Systems Ltd.</papertitle> </a>
+              <br><br>
+		Worked on designing a real-time Sign2Text translator for Bangla Sign Language.
+            </td>
+          </tr>
+	
+        </tbody></table>
         
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -355,7 +402,7 @@
                 <tr>
                   <td style="padding:25px;width:25%;vertical-align:middle">
                     <p style="text-align:center;font-size:small;">
-		              <a href="http://www.clustrmaps.com/map/Muntakimrafi.github.io" title="Visit tracker for Muntakimrafi.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=HQV-4JuQvmOm3EvitfLO6HDD9bb7wA9SR_0RpufiNcA" /></a>                    </p>
+		              <a href="https://clustrmaps.com/site/1bjpz" title="Visit tracker for Muntakimrafi.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=HQV-4JuQvmOm3EvitfLO6HDD9bb7wA9SR_0RpufiNcA" /></a>                    </p>
                   </td>
                 </tr>
                 </tbody></table>
