--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         </tbody></table>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/lanner.jfif", width="160">
+              <img src="images/1.png", width="160">
             </td>
             <td width="75%" valign="center">
               <a href="https://www.lannerinc.com/"><papertitle>Mitacs Accelerate Intern, Lanner Electronics Inc.</papertitle> </a>
@@ -362,7 +362,7 @@
 	
 	   <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/ifiveo.png", width="160">
+              <img src="images/1.png", width="160">
             </td>
             <td width="75%" valign="center">
               <a href="https://www.i-5o.ai/"><papertitle>Deep Learning Engineer, IFIVEO.</papertitle> </a>
@@ -375,7 +375,7 @@
 	
 	   <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/reve.jpg", width="160">
+              <img src="images/1.png", width="160">
             </td>
             <td width="75%" valign="center">
               <a href="https://www.revesoft.com//"><papertitle>Machine Learning Engineer, REVE Systems Ltd.</papertitle> </a>
