--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           </tr>
         </tbody></table>
 	
-	<!--Job Experience-->
+<!--Job Experience-->
 
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
@@ -348,9 +348,11 @@
             </td>
           </tr>
         </tbody></table>
-          <tr>
+        
+	<table width="100%" align="center" border="0" cellpadding="20"><tbody>
+	<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/1.png", width="160">
+              <img src="images/lanner.jfif", width="160">
             </td>
             <td width="75%" valign="center">
               <a href="https://www.lannerinc.com/"><papertitle>Mitacs Accelerate Intern, Lanner Electronics Inc.</papertitle> </a>
@@ -362,7 +364,7 @@
 	
 	   <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/1.png", width="160">
+              <img src="images/ifiveo.png", width="160">
             </td>
             <td width="75%" valign="center">
               <a href="https://www.i-5o.ai/"><papertitle>Deep Learning Engineer, IFIVEO.</papertitle> </a>
@@ -375,7 +377,7 @@
 	
 	   <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/1.png", width="160">
+              <img src="images/reve.jfif", width="160">
             </td>
             <td width="75%" valign="center">
               <a href="https://www.revesoft.com//"><papertitle>Machine Learning Engineer, REVE Systems Ltd.</papertitle> </a>
