--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
                 <a href="data/CV_RAFI_SEP_2021.pdf" target="_blank">CV</a> &nbsp|&nbsp
                 <a href="https://scholar.google.com/citations?user=fyNavPkAAAAJ&hl=en">Google Scholar</a>
                 &nbsp|&nbsp
-                <a href="https://www.researchgate.net/profile/Abdul-Muntakim-Rafi/publications">Research Gate</a> &nbsp|&nbsp
-                <a href="https://github.com/muntakimrafi">Github</a> &nbsp|&nbsp
-                <a href="https://twitter.com/muntakim_rafi">Twitter</a> &nbsp|&nbsp
-                <a href="https://www.youtube.com/user/MrSebastian12358/videos">YouTube</a>
+                <a href="https://www.linkedin.com/in/abdul-muntakim-rafi-205002154/">LinkedIn</a> &nbsp|&nbsp
+                <a href="https://www.researchgate.net/profile/Abdul-Muntakim-Rafi/publications">Research Gate</a> &nbsp|&nbsp		
+                <a href="https://github.com/muntakimrafi">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
