--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                 <a href="https://scholar.google.com/citations?user=fyNavPkAAAAJ&hl=en">Google Scholar</a>
                 &nbsp|&nbsp
                 <a href="https://www.linkedin.com/in/abdul-muntakim-rafi-205002154/">LinkedIn</a> &nbsp|&nbsp
-                <a href="https://www.researchgate.net/profile/Abdul-Muntakim-Rafi/publications">Research Gate</a> &nbsp|&nbsp		
+                <a href="https://www.researchgate.net/profile/Abdul-Muntakim-Rafi/publications">ResearchGate</a> &nbsp|&nbsp		
                 <a href="https://github.com/muntakimrafi">Github</a>
+		<a href="data/CV_of_Failure.pdf" target="_blank">CV of Failure</a> &nbsp|&nbsp
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
