--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="https://www.linkedin.com/in/abdul-muntakim-rafi-205002154/">LinkedIn</a> &nbsp|&nbsp
                 <a href="https://www.researchgate.net/profile/Abdul-Muntakim-Rafi/publications">ResearchGate</a> &nbsp|&nbsp		
                 <a href="https://github.com/muntakimrafi">Github</a> &nbsp|&nbsp
-		<a href="data/CV_of_Failure.pdf" target="_blank">Cv of Failures</a>
+		<a href="data/CV_of_Failure.pdf" target="_blank">CV of Failures</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
