--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <br>
                 <name>Abdul Muntakim Rafi</name>
               </p>
-                <p>I am a PhD Candidate at the University of British Columbia working under the supervision of Dr.
+                <p>I am a PhD student at the University of British Columbia working under the supervision of Dr.
                   Carl de Boer. Our lab aims to understand how the genome is regulated using high-throughput experimental approaches and machine learning.                  
 		<br><br>
 		A summary of my profile is as follows:
