fixing course broken link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </p>
                 <p>I am a Ph.D. candidate in Biomedical Engineering at the University of British Columbia. I completed my Bachelor’s degree in Electrical and Electronic Engineering at Bangladesh University of Engineering & Technology and later pursued my Master’s in Electrical and Computer Engineering at University of Windsor. 
 		<br><br>
-		My current research concentrates on employing machine learning to design cis-regulatory models, develop methods to interpret them, and explore ways to enhance their performance, contributing to a quantitative comprehension of cis-regulatory logic. I have expertise in various programming languages and machine learning libraries, publications in top-tier ML conferences, and experience of working as a machine learning engineer in software companies and startups. I have supervised undergraduate students in the de Boer lab and am always on the lookout for motivated undergrads/high schoolers to join my research endeavors.                 
+		My current research concentrates on employing machine learning to design cis-regulatory models, develop methods to interpret them, and explore ways to enhance their performance, contributing to a quantitative comprehension of cis-regulatory logic. I have expertise in various programming languages and machine learning libraries, publications in top-tier ML conferences, and experience of working as a machine learning engineer in software companies and startups. <strong>I have supervised multiple Co-op students in the de Boer lab and am always on the lookout for motivated undergrads/high schoolers to join my research endeavors.</strong>                 
                 </p>
               </p>
               <p style="text-align:center">
@@ -93,7 +93,7 @@
                 [<a href="https://zenodo.org/record/7395397">Data</a>]
               </a>
               <br>
-             <strong>Abdul Muntakim Rafi</strong>, Dmitry Penzar, Daria Nogina, Dohoon Lee, Eeshit Dhaval Vaishnav, Danyeong Lee, Nayeon Kim, Sangyeup Kim, Georgy Meshcheryakov, Andrey Lando, Payman Yadollahpour, Arsenii Zinkevich, Dohyeon Kim, Yeojin Shin, Il-Youp Kwak, Byeong-Chan Kim, Juhyun Lee, Random Promoter DREAM Challenge Consortium, Sun Kim, Aviv Regev, Jake Albrecht, Wuming Gong, Ivan V. Kulakovskiy, Pablo Meyer, Carl de Boer
+             <strong>Abdul Muntakim Rafi</strong>, Dmitry Penzar, Daria Nogina, Dohoon Lee, Eeshit Dhaval Vaishnav, Danyeong Lee, Nayeon Kim, Sangyeup Kim, Georgy Meshcheryakov, Andrey Lando, Payman Yadollahpour, Arsenii Zinkevich, Dohyeon Kim, Yeojin Shin, Il-Youp Kwak, Byeong-Chan Kim, Juhyun Lee, <strong>Random Promoter DREAM Challenge Consortium</strong>, Sun Kim, Aviv Regev, Jake Albrecht, Wuming Gong, Ivan V. Kulakovskiy, Pablo Meyer, Carl de Boer
               <br>
 
               <a href="https://www.synapse.org/#!Synapse:syn28469146/wiki/617075"><em>Random Promoter DREAM Challenge 2022</em></a> &nbsp
@@ -401,7 +401,7 @@
               <a href="https://www.biology.ubc.ca/"><papertitle>Biology, University of British Columbia </papertitle></a>
                 <br>
                 <br>
-                <a href="https://courses.students.ubc.ca/cs/courseschedule?pname=subjarea&tname=subj-course&dept=BIOL&course=234/">BIOL 234: Fundamentals of Genetics</a>
+                BIOL 234: Fundamentals of Genetics
 
             </td>
           </tr>
