--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </td>
 	</tr> 
 
-<!--tpGAN-->
+<!-- <!--tpGAN-->
 <!--        -->
 <tr onmouseout="dense_stop()" onmouseover="dense_start()"  bgcolor="#ffffff">
   <td style="padding:20px;width:25%;vertical-align:middle">
@@ -135,7 +135,7 @@
     <p></p>
     Genomes encode for genes and the regulatory signals that enable those genes to be transcribed, and are continually shaped by evolution. Genomes, including those of human and yeast, encode for numerous regulatory elements and transcripts that have limited evidence of conservation or function. Here, we sought to create a genomic null hypothesis by quantifying the gene ...
 </td>
-</tr> 
+</tr>  -->
 
 <!--tpGAN-->
 <!--        -->
