--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.biorxiv.org/content/10.1101/2023.04.26.538471v1.full.pdf">
+              <a href="https://www.biorxiv.org/content/10.1101/2023.04.26.538471v2">
                 <papertitle>Evaluation and optimization of sequence-based gene regulatory deep learning models</papertitle>
                 <br>
-                [<a href="https://zenodo.org/record/7395397">Data</a>]
+                [<a href="https://zenodo.org/record/7395397">Data</a>] [<a href="https://github.com/de-Boer-Lab/random-promoter-dream-challenge-2022">Code</a>]
               </a>
               <br>
-             <strong>Abdul Muntakim Rafi</strong>, Dmitry Penzar, Daria Nogina, Dohoon Lee, Eeshit Dhaval Vaishnav, Danyeong Lee, Nayeon Kim, Sangyeup Kim, Georgy Meshcheryakov, Andrey Lando, Payman Yadollahpour, Arsenii Zinkevich, Dohyeon Kim, Yeojin Shin, Il-Youp Kwak, Byeong-Chan Kim, Juhyun Lee, <strong>Random Promoter DREAM Challenge Consortium</strong>, Sun Kim, Aviv Regev, Jake Albrecht, Wuming Gong, Ivan V. Kulakovskiy, Pablo Meyer, Carl de Boer
+             <strong>Abdul Muntakim Rafi</strong>, Daria Nogina, Dmitry Penzar, Dohoon Lee, Danyeong Lee, Nayeon Kim, Sangyeup Kim, Dohyeon Kim, Yeojin Shin,  Il-Youp Kwak, Georgy Meshcheryakov, Andrey Lando, Arsenii Zinkevich, Byeong-Chan Kim, Juhyun Lee, Taein Kang, Eeshit Dhaval Vaishnav, Payman Yadollahpour, <strong>Random Promoter DREAM Challenge Consortium</strong>strong>, Sun Kim, Jake Albrecht, Aviv Regev, Wuming Gong, Ivan V. Kulakovskiy, Pablo Meyer, Carl de Boer
               <br>
 
               <a href="https://www.synapse.org/#!Synapse:syn28469146/wiki/617075"><em>Random Promoter DREAM Challenge 2022</em></a> &nbsp
