--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.biorxiv.org/content/10.1101/2023.04.26.538471v2">
-                <papertitle>Evaluation and optimization of sequence-based gene regulatory deep learning models</papertitle>
+              <a href="https://www.nature.com/articles/s41587-024-02414-w">
+                <papertitle>A community effort to optimize sequence-based deep learning models of gene regulation</papertitle>
                 <br>
                 [<a href="https://zenodo.org/record/7395397">Data</a>] [<a href="https://github.com/de-Boer-Lab/random-promoter-dream-challenge-2022">Code</a>]
               </a>
