--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
               </p>
               <p style="text-align:center">
-                <a href="mailto:abdulmuntakim.rafi@ubc.ca">Email</a> &nbsp|&nbsp
+                <a href="mailto:rafi11@student.ubc.ca">Email</a> &nbsp|&nbsp
                 <a href="data/CV_RAFI_SEP_2024.pdf" target="_blank">CV</a> &nbsp|&nbsp
                 <a href="https://scholar.google.com/citations?user=fyNavPkAAAAJ&hl=en">Google Scholar</a>
                 &nbsp|&nbsp
