--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:rafi11@student.ubc.ca">Email</a> &nbsp|&nbsp
-                <a href="data/CV_RAFI_JAN_2025.pdf" target="_blank">CV</a> &nbsp|&nbsp
+                <a href="data/CV_RAFI_MAY_2025.pdf" target="_blank">CV</a> &nbsp|&nbsp
                 <a href="https://scholar.google.com/citations?user=fyNavPkAAAAJ&hl=en">Google Scholar</a>
                 &nbsp|&nbsp
                 <a href="https://www.linkedin.com/in/abdul-muntakim-rafi-205002154/">LinkedIn</a> &nbsp|&nbsp
